Почистил код